Everything is fine...

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
+        <meta property="og:type" content="website">
+    <meta property="og:title" content="Junior Akadémia">
+    <meta property="og:description" content="Felvételi előkészítők, nyelvoktatás és még sok más!">
+    <meta property="og:image" content="http://juniorakademia.hu/logo.png">
+
+
+    
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
